--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
-    "@apollo/server": "^4.12.0",
     "@as-integrations/next": "^3.2.0",
+    "@graphql-tools/merge": "^9.0.24",
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "15.3.1",
     "pg": "^8.15.6",
     "react": "^19.0.0",
