--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.0"
   },
