--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-navigation-menu": "^1.2.12",
     "@supabase/supabase-js": "^2.49.4",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
@@ -27,6 +28,7 @@
     "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.0"
