--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.510.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.1",
     "pg": "^8.15.6",
     "react": "^19.0.0",
