新增 - 訂單細節

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^7.6.0",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.0"
